# MelodyHub

./: .gitignore  .npmrc  CHANGELOG.md  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/screenshots/: README.md
e2e/: visual-regression.spec.ts
plans/: 001-pause-dither-for-reduced-motion.md  002-replace-global-reduced-motion-kill-switch.md  003-remove-header-route-animation.md  004-make-stepper-motion-compositor-safe.md  005-make-button-press-feedback-retriggerable.md  006-animate-toast-lifecycle.md  007-repair-transition-token-consumers.md  008-make-menus-origin-aware-and-input-aware.md  009-give-confirm-dialog-an-exit-transition.md  README.md
public/brand/: README.md  brand-tokens.json
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns  tray-icon-template.rgba
src-tauri/src/: crypto.rs  lib.rs  main.rs  paths.rs  storage.rs  types.rs
src-tauri/src/commands/: logs.rs  mod.rs  providers.rs  settings.rs  stats.rs  updater.rs
src-tauri/src/proxy/: adapter.rs  metrics.rs  mod.rs  routing.rs  server.rs  state.rs
src/__tests__/: basics.test.ts
src/i18n/: en.ts  index.ts  zh-CN.ts
src/lib/: colorUtils.ts  desktopApi.test.ts  desktopApi.ts  modelPresets.ts
src/store/: aggregationStore.ts  providerStore.ts  settingsStore.ts  statsStore.ts
src/test/: setup.ts
src/types/: aggregation.ts  provider.ts  settings.ts  (+1 more)
(+70 files in other folders)
