[package]
name = "melody-hub"
version = "0.1.0"
description = "Local LLM API aggregation proxy"
authors = ["you"]
edition = "2021"

[lib]
name = "melody_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
dirs = "6"
open = "5"
